adjusts width size to prevent horizontal scroll in small short devices

--- a/src/css/about.module.css
+++ b/src/css/about.module.css
@@ -1,15 +1,16 @@
 #about {
-  min-height: 100vh;
-  height: auto;
-  overflow-y: hidden;
+  overflow: hidden;
   width: var(--width);
-  max-width: 100vw;
-  margin: 0 auto;
+  height: auto;
+  width: 90%;
+  margin: 10px auto;
+  min-height: 100vh;
 }
 .about-container {
-  max-width: 80%;
+  max-width: 600px;
   margin: 0;
   padding: 0;
+
   top: 0;
   display: flex;
   flex-direction: column;
@@ -31,7 +32,7 @@
 
 .about-text {
   background-color: var(--container);
-  width: 80%;
+  width: 90%;
   height: auto;
   margin: 10px auto;
   padding: 20px;
@@ -50,10 +51,26 @@
 
 @media (max-width: 668px) {
   .about-container {
+    min-width: 100px;
     padding-bottom: 300px;
+    padding: 0;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    margin: 0 auto;
+    width: 80%;
+    padding-bottom: 100px;
   }
   .about-img {
-    width: 300px;
-    height: 300px;
+    width: 80%;
+    height: 80%;
+    padding: 0;
+    margin: 20px auto;
+    margin-bottom: 20px;
+    min-height: 200px;
+  }
+
+  .about-text {
+    margin-bottom: 10px;
   }
 }
