--- a/src/css/contact.module.css
+++ b/src/css/contact.module.css
@@ -1,14 +1,16 @@
-#contact .container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-top: 0px;
-
+#contact {
+  overflow: hidden;
+  width: 95%;
+  height: auto;
+  margin: 10px auto;
+  min-height: 100vh;
+  max-width: var(--width);
+  padding: 0px;
+  margin:0;
 }
 .contact-container {
   background-color: var(--container);
-  width: 300px;
+  width: 500px;
   max-width: 90%;
   border-radius: 10%;
   box-shadow: var(--shadow);
@@ -40,11 +42,6 @@ top: 0px;
 }
 
 @media (max-width: 412px) {
-  #contact h2 {
-    margin: 0px;
-  }
-
-
   .contact-container {
     width: 200px;
   }
